--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -49,7 +49,7 @@
 
 <footer class="bg-dark mt-5" th:fragment="footer">
     <div class="container d-flex align-items-center justify-content-center py-4 ">
-        <span class="dog-face">🐶</span>
+        <span class="dog-face"></span>
         <span class="font-italic text-light" id="random-dog-fact"></span>
     </div>
 </footer>
