trial on null setDate

--- a/src/main/resources/templates/task/task-create.html
+++ b/src/main/resources/templates/task/task-create.html
@@ -31,7 +31,7 @@
             <div id="dateScheduledField" style="display: none;">
                 <div class="form-group mb-3">
                     <label for="dateScheduled">Scheduled Date</label>
-                    <input type="date" name="dateScheduled" id="dateScheduled" class="form-control">
+                    <input th:field="*{dateScheduled}" type="date" name="dateScheduled" id="dateScheduled" class="form-control">
                 </div>
             </div>
 
