--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -32,9 +32,9 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+<!--          <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--            <span aria-hidden="true">&times;</span>-->
+<!--          </button>-->
         </div>
         <div class="modal-body">
           Are you sure you want to delete this task: <span id="taskTitle"></span>?
