--- a/src/main/resources/templates/task/task-create.html
+++ b/src/main/resources/templates/task/task-create.html
@@ -23,7 +23,7 @@
 
             <!-- Checkbox for scheduling -->
             <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="scheduleCheckbox">
+                <input type="checkbox" class="form-check-input" id="scheduleCheckbox" name="scheduleCheckbox">
                 <label class="form-check-label" for="scheduleCheckbox">Schedule Task</label>
             </div>
 
