--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -23,7 +23,7 @@
 
       <!-- Checkbox for scheduling -->
       <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="scheduleCheckbox" th:checked="${task.dateScheduled != null}">
+        <input type="checkbox" class="form-check-input" name="scheduleCheckbox" id="scheduleCheckbox" th:checked="${task.dateScheduled != null}">
         <label class="form-check-label" for="scheduleCheckbox">Schedule Task</label>
       </div>
 
