--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -37,7 +37,7 @@
       <div th:if="${#strings.contains(task.dateScheduled, '1969')}" id="dateScheduledField" style="display: none;">
         <div class="form-group mb-3">
           <label for="dateScheduled">Scheduled Date</label>
-          <input th:field="*{dateScheduled}" type="date" name="dateScheduled" id="dateScheduled1" class="form-control">
+          <input th:field="*{dateScheduled}" type="date" name="dateScheduled" id="dateScheduled" class="form-control">
         </div>
       </div>
 
@@ -63,17 +63,15 @@
 
   const scheduleCheckbox = document.querySelector("#scheduleCheckbox");
   const dateScheduledField = document.querySelector("#dateScheduledField");
-  const dateScheduleCal = document.querySelector("#dateScheduled");
-  const dateScheduled1 = document.querySelector("#dateScheduled1");
+  const dateScheduled = document.querySelector("#dateScheduled");
 
   scheduleCheckbox.addEventListener("change", function() {
     if (scheduleCheckbox.checked) {
       dateScheduledField.style.display = "block";
-      dateScheduled1.value = new Date().toISOString().substring(0, 10);
+      dateScheduled.value = new Date().toISOString().substring(0, 10);
     } else {
       dateScheduledField.style.display = "none";
-      dateScheduleCal.value = "1969-12-31";
-      dateScheduled1.value = "1969-12-31";
+      dateScheduled.value = "1969-12-31";
     }
   });
 
