--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -18,9 +18,19 @@
         <li>Complete: <span th:text="${task.complete}"></span></li>
         <li>Category: <span th:text="${task.category.title}"></span></li>
       </ul>
+
+      <form th:method="POST" th:action="@{|/task/complete/${task.id}|}" th:object="${task}" th:data-task-id="${task.id}" th:data-task-title="${task.title}">
+        <button type="button" class="btn btn-dark" onclick="showCompleteConfirmationModal(this.form)">Mark as complete</button>
+      </form>
+
+      <form>
+
+      </form>
+
       <form th:method="POST" th:action="@{|/task/delete/${task.id}|}" th:object="${task}" th:data-task-id="${task.id}" th:data-task-title="${task.title}">
         <button type="button" class="btn btn-dark" onclick="showDeleteConfirmationModal(this.form)">Delete Task</button>
       </form>
+
       <a th:href="@{|/task/edit/${task.id}|}">Edit Task</a>
     </div>
   </main>
@@ -46,6 +56,31 @@
     </div>
   </div>
 <!--  DELETE CONFIRMATION MODAL -->
+
+
+
+<!--  COMPLETE CONFIRMATION MODAL -->
+  <div class="modal fade" id="completeConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="completeConfirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="completeConfirmationModalLabel">Confirm Complete</h5>
+          <!--          <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+          <!--            <span aria-hidden="true">&times;</span>-->
+          <!--          </button>-->
+        </div>
+        <div class="modal-body">
+          Are you sure you want to delete this task: <span id="taskTitleC"></span>?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-success" id="confirmComplete">Complete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--  COMPLETE CONFIRMATION MODAL -->
+
 
 
   <footer th:replace="/partials/partials :: footer"></footer>
@@ -84,6 +119,39 @@
       form.submit();
     });
   }
+
+  //////////////////////////////////////////////////////////////////////////////////
+
+  /// Function to show the complete confirmation modal
+  function showCompleteConfirmationModal(form) {
+    let modal = document.querySelector('#completeConfirmationModal');
+    let taskTitleSpan = document.querySelector('#taskTitleC');
+
+
+    // Extract the task title and ID from the form's data attributes
+    let taskTitle = form.getAttribute('data-task-title');
+    let taskId = form.getAttribute('data-task-id');
+
+    // Set the task title in the modal
+    taskTitleSpan.innerText = taskTitle;
+
+    modal.classList.add('show');
+    modal.style.display = 'block';
+
+    // Attach a click event listener to the Cancel button
+    const cancelButton = document.querySelector('#completeConfirmationModal button.btn-secondary');
+    cancelButton.addEventListener('click', function() {
+      modal.style.display = 'none';
+    });
+
+    // Attach a click event listener to the Delete button
+    const confirmDeleteButton = document.querySelector('#confirmComplete');
+    confirmDeleteButton.addEventListener('click', function() {
+      // Submit the form associated with the clicked button
+      form.submit();
+    });
+  }
+
 
 
 
