--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -23,8 +23,8 @@
         <button type="button" class="btn btn-dark" onclick="showCompleteConfirmationModal(this.form)">Mark as complete</button>
       </form>
 
-      <form>
-
+      <form th:method="POST" th:action="@{|/task/incomplete/${task.id}|}" th:object="${task}" th:data-task-id="${task.id}" th:data-task-title="${task.title}">
+        <button type="button" class="btn btn-dark" onclick="showIncompleteConfirmationModal(this.form)">Mark as incomplete (ongoing)</button>
       </form>
 
       <form th:method="POST" th:action="@{|/task/delete/${task.id}|}" th:object="${task}" th:data-task-id="${task.id}" th:data-task-title="${task.title}">
@@ -41,9 +41,6 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
-<!--          <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--            <span aria-hidden="true">&times;</span>-->
-<!--          </button>-->
         </div>
         <div class="modal-body">
           Are you sure you want to delete this task: <span id="taskTitle"></span>?
@@ -57,20 +54,15 @@
   </div>
 <!--  DELETE CONFIRMATION MODAL -->
 
-
-
 <!--  COMPLETE CONFIRMATION MODAL -->
   <div class="modal fade" id="completeConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="completeConfirmationModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="completeConfirmationModalLabel">Confirm Complete</h5>
-          <!--          <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-          <!--            <span aria-hidden="true">&times;</span>-->
-          <!--          </button>-->
         </div>
         <div class="modal-body">
-          Are you sure you want to delete this task: <span id="taskTitleC"></span>?
+          Are you sure you want to complete this task: <span id="taskTitleC"></span>?
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -80,6 +72,25 @@
     </div>
   </div>
 <!--  COMPLETE CONFIRMATION MODAL -->
+
+<!--  INCOMPLETE CONFIRMATION MODAL -->
+<div class="modal fade" id="incompleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="completeConfirmationModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="incompleteConfirmationModalLabel">Confirm Incomplete</h5>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to mark this task as "Incomplete" : <span id="taskTitleI"></span>?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-warning" id="confirmIncomplete">Incomplete</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--  INCOMPLETE CONFIRMATION MODAL -->
 
 
 
@@ -146,6 +157,39 @@
 
     // Attach a click event listener to the Delete button
     const confirmDeleteButton = document.querySelector('#confirmComplete');
+    confirmDeleteButton.addEventListener('click', function() {
+      // Submit the form associated with the clicked button
+      form.submit();
+    });
+  }
+
+
+  //////////////////////////////////////////////////////////////////////////////////
+
+  /// Function to show the incomplete confirmation modal
+  function showIncompleteConfirmationModal(form) {
+    let modal = document.querySelector('#incompleteConfirmationModal');
+    let taskTitleSpan = document.querySelector('#taskTitleI');
+
+
+    // Extract the task title and ID from the form's data attributes
+    let taskTitle = form.getAttribute('data-task-title');
+    let taskId = form.getAttribute('data-task-id');
+
+    // Set the task title in the modal
+    taskTitleSpan.innerText = taskTitle;
+
+    modal.classList.add('show');
+    modal.style.display = 'block';
+
+    // Attach a click event listener to the Cancel button
+    const cancelButton = document.querySelector('#incompleteConfirmationModal button.btn-secondary');
+    cancelButton.addEventListener('click', function() {
+      modal.style.display = 'none';
+    });
+
+    // Attach a click event listener to the Delete button
+    const confirmDeleteButton = document.querySelector('#confirmIncomplete');
     confirmDeleteButton.addEventListener('click', function() {
       // Submit the form associated with the clicked button
       form.submit();
