styling ul list

--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -30,7 +30,7 @@
                         th:text="${task.dateScheduled}"></span></li>
                 <li class="list-group-item list-group-item-light">Complete: <span th:text="${task.complete}"></span>
                 </li>
-                <li class="list-group-item list-group-item-light">Category: <span
+                <li class="list-group-item list-group-item-secondary">Category: <span
                         th:text="${task.category.title}"></span></li>
             </ul>
 
